tests/snapshots/parse__stdlib_printf.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(printf)\n  Function(sprintf)\n  Function(main)\n\n"
stderr: ""
status: 0
