tests/snapshots/parse__struct_designated_partial.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  StructDef(Point)\n  Function(main)\n\n"
stderr: ""
status: 0
