tests/snapshots/parse__struct_nested_init.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  StructDef(Inner)\n  StructDef(Outer)\n  Function(main)\n\n"
stderr: ""
status: 0
