tests/snapshots/parse__struct_ops.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  StructDef(Pair)\n  Function(main)\n\n"
stderr: ""
status: 0
