tests/snapshots/parse__token_pasting.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  Function(printf)\n  Function(main)\n\n"
stderr: ""
status: 0
