tests/snapshots/parse__type_conv_sign_extend.snap
---
source: tests/parse.rs
expression: "&result"
---
stdout: "Program\n  VarDecl(g)\n  Function(main)\n\n"
stderr: ""
status: 0
